8288846: misc tests fail "assert(ms < 1000) failed: Un-interruptable sleep, short time use only"

Backport-of: 6037ccdd50acd5424a46120028738b811dff064a